[project]
name = "resalloc-ibm-cloud"
version = "1.0"
description = "Resource allocator scripts for IBM cloud"
authors = [{name = "Copr team", email = "copr-team@redhat.com" }]
maintainers = [{name = "Copr team", email = "copr-team@redhat.com" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "ibm-vpc>=0.9.0",
    "ibm-cloud-sdk-core>=3.13.0",
    "backoff>=2.0.0",
]


[project.urls]
homepage = "https://github.com/fedora-copr/resalloc-ibm-cloud"
repository = "https://github.com/fedora-copr/resalloc-ibm-cloud"


[project.scripts]
resalloc-ibm-cloud-list-deleting-vms = "resalloc_ibm_cloud.ibm_cloud_list_deleting_vms:main"
resalloc-ibm-cloud-list-deleting-volumes = "resalloc_ibm_cloud.list_deleting_volumes:main"
resalloc-ibm-cloud-list-vms = "resalloc_ibm_cloud.ibm_cloud_list_vms:main"
resalloc-ibm-cloud-vm = "resalloc_ibm_cloud.ibm_cloud_vm:main"
resalloc-ibm-cloud-powervs-vm = "resalloc_ibm_cloud.powervs.powervs_vm:main"
resalloc-ibm-cloud-powervs-list-vms = "resalloc_ibm_cloud.powervs.powervs_list_vms:main"
resalloc-ibm-cloud-powervs-list-deleting-vms = "resalloc_ibm_cloud.powervs.powervs_list_deleting_vms:main"


[build-system]
requires = ["argparse-manpage[setuptools]>=4.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools.cmdclass]
build_py = "build_manpages.build_py"
install = "build_manpages.install"
build_manpages = "build_manpages.build_manpages"

[tool.build_manpages]
manpages = [
    "man/resalloc-ibm-cloud-vm.1:function=vm_arg_parser:pyfile=resalloc_ibm_cloud/argparsers.py",
    "man/resalloc-ibm-cloud-list-vms.1:function=list_vms_parser:pyfile=resalloc_ibm_cloud/argparsers.py",
    "man/resalloc-ibm-cloud-list-deleting-vms.1:function=list_deleting_vms_parser:pyfile=resalloc_ibm_cloud/argparsers.py",
    "man/resalloc-ibm-cloud-list-deleting-volumes.1:function=list_deleting_volumes_parser:pyfile=resalloc_ibm_cloud/argparsers.py",
    "man/resalloc-ibm-cloud-powervs-vm.1:function=powervs_arg_parser:pyfile=resalloc_ibm_cloud/argparsers.py",
    "man/resalloc-ibm-cloud-powervs-list-vms.1:function=powervs_list_vms_parser:pyfile=resalloc_ibm_cloud/argparsers.py",
    "man/resalloc-ibm-cloud-powervs-list-deleting-vms.1:function=powervs_list_deleting_vms_parser:pyfile=resalloc_ibm_cloud/argparsers.py",
]
